tests/should_fail/terminates/simple_recursion.stderr
error: Recursive function without a `#[variant]` clause
 --> simple_recursion.rs:6:1
  |
6 | fn recurses(b: bool) {
  | ^^^^^^^^^^^^^^^^^^^^
  |
note: Recursive call happens here
 --> simple_recursion.rs:8:9
  |
8 |         recurses(!b);
  |         ^^^^^^^^^^^^

error: aborting due to 1 previous error

